Bomberguy/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Program Files\BlueJ\lib\userlib\GLOOP.jar;C:\Program Files\BlueJ\lib\userlib\gluegen-rt-natives-windows-amd64.jar;C:\Program Files\BlueJ\lib\userlib\gluegen-rt-natives-windows-i586.jar;C:\Program Files\BlueJ\lib\userlib\gluegen-rt.jar;C:\Program Files\BlueJ\lib\userlib\jogl-all-natives-windows-amd64.jar;C:\Program Files\BlueJ\lib\userlib\jogl-all-natives-windows-i586.jar;C:\Program Files\BlueJ\lib\userlib\jogl-all.jar;C:\Users\User\Documents\GitHub\gurken\Bomberguy
-d
C:\Users\User\Documents\GitHub\gurken\Bomberguy\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\User\Documents\GitHub\gurken\Bomberguy\Simulation.java
<---- end of javadoc command ---->
Loading source file C:\Users\User\Documents\GitHub\gurken\Bomberguy\Simulation.java...
C:\Users\User\Documents\GitHub\gurken\Bomberguy\Simulation.java:24: error: ';' expected
        if(tastatur.alt()== true){System.out.println("true")} else{}
                                                            ^
1 error
